[feat] 인증 관련 로직 수정